[CW8]
* SyncProxyAndroid SDK: App resumption (USB) - SPT doesn't appear at HMI's App List
+ Process Start non RPC Service Nack
+ SyncProxyAndroid SDK: Add PredefinedLayout enum.
+ Add DiagnosticMessage request UI.
+ SyncProxyAndroid SDK: Add DiagnosticMessage request and response classes.
* Improve application exit: close non RPC services first, then close RPC, then - exit.

[CW7]
+ SyncProxyAndroid SDK: add AudioPassThruCapabilities struct. Add parameters to RegisterAppInterfaceResponse class.
+ SyncProxyAndroid SDK: add new parameters to SetDisplayLayoutResponse class.
+ Policy Table: read Snapshot file, response with Update file
+ Add secondaryGraphic parameter to Show UI.
+ SyncProxyAndroid SDK: Add secondaryGraphic parameter to Show request.
- Remove encrypted parameter from ReadDID UI.
* SyncProxyAndroid SDK: Add DIDResult struct. Update ReadDID and ReadDIDResponse.
+ Add endTime parameter to SetMediaClockTimer UI.
+ SyncProxyAndroid SDK: Add endTime parameter to SetMediaClockTimer request.
* SyncProxyAndroid SDK: Update VehicleDataType enum. Add new parameters to OnVehicleData notification. Sync *VehicleData* messages' parameters with the specification.
- SyncProxyAndroid SDK: removed heartbeat feature
* SyncProxyAndroid SDK: Update FileType enum.
* SyncProxyAndroid SDK: Add prerecordedSpeech parameter to RegisterAppInterfaceResponse class.
* Fix 'USB: Application is not recognizable by SDLCore' if the application is closed when the stream is opened.
* SyncProxyAndroid SDK: Update HeadLampStatus struct. Add headLampStatus parameter to OnVehicleData notification.
* SyncProxyAndroid SDK: Add displayCapabilities parameter to SetDisplayLayoutResponse class.
+ SyncProxyAndroid SDK: Add ImageFieldName enum, ImageField struct, ScreenParams struct. Update DisplayCapabilities struct.

[CW6]
+ SyncProxyAndroid SDK: changed video for Alice build
+ SyncProxyAndroid SDK: changed registration/unregistration procedure.