@@ -1,47 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="10dip"
-              android:layout_marginRight="10dip"
-              android:minWidth="300dp"
-              android:orientation="vertical"
-              android:paddingLeft="20dip"
-              android:paddingRight="20dip">
-
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/alertManeuver_ttsChunks"
-            android:textStyle="bold"/>
-
-    <EditText
-            android:id="@+id/txtTtsChunks"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:freezesText="true"
-            android:text="@string/alertManeuver_ttsChunksDefault"
-            android:visibility="visible"
-            android:inputType="textCapWords"/>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <CheckBox
-                android:id="@+id/alertManeuver_chkIncludeSBs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/includeSoftButtons"/>
-
-        <Button
-                android:id="@+id/alertManeuver_btnSoftButtons"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/softButtons"/>
-
-    </LinearLayout>
-
-</LinearLayout>
